[tool.poetry]
name = "mapper"
version = "0.0.1"
description = ""
authors = ["JuFo-3D-Cartography"]
readme = "README.md"

[tool.poetry.scripts]
mapper = "mapper.main:app"

[tool.poetry.dependencies]
python = "3.9.7"
typer = { extras = ["all"], version = "^0.7.0" }
opencv-python = "^4.7.0.72"
h5py = "^3.8.0"
open3d = "0.17.0"
tqdm = "^4.65.0"
numpy = "1.24.2"
Pillow = "^9.4.0"
timm = "^0.6.13"
torch = "^2.0.0"
matplotlib = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
